--- a/src/components/Navbar.module.css
+++ b/src/components/Navbar.module.css
@@ -9,15 +9,13 @@
   margin: 0 auto;
   max-width: 960px;
   align-items: center;
+  gap: 8px;
 }
 .title{
   margin-right: auto;
   font-weight: bold;
   letter-spacing: 1px;
   font-size: 1.2em;
-}
-.navbar button, .navbar a{
-  margin-left: 16px;
 }
 .navbar a{
   color: #333;
